unpackaged/main/default/objects/pse__Time_Period__c/pse__Time_Period__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__TimePeriodHelp</customHelpPage>
    <description>The divisions of time that your services organization is concerned with. Time periods have types such as Month (e.g. November 2014), Quarter (e.g. Q4 2014), Year (e.g. 2014), or Perpetual (‘All Time’). Time periods drive how actuals are categorized, how forecasting is done, how billing events are generated, and most other time-specific functions within FinancialForce PSA. Always create one perpetual time period with an end date well into the future.</description>
    <label>Time Period</label>
    <nameField>
        <label>Time Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>