unpackaged/main/default/objects/pse__Time_Period__c/fields/pse__Closed_For_Forecasting__c.field-meta.xml
<CustomField>
    <fullName>pse__Closed_For_Forecasting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this time period is closed for Revenue Forecasting.</description>
    <inlineHelpText>Select to mark this time period as closed for Revenue Forecasting.</inlineHelpText>
    <label>Closed for Forecasting</label>
    <type>Checkbox</type>
</CustomField>