unpackaged/main/default/objects/pse__Time_Period__c/fields/pse__Closed_For_Forecasting_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Closed_For_Forecasting_Date_Time__c</fullName>
    <description>The date and time that the time period was closed for forecasting.</description>
    <inlineHelpText>The date and time that the time period was closed for forecasting.</inlineHelpText>
    <label>Date Marked as Closed for Forecasting</label>
    <type>DateTime</type>
</CustomField>