unpackaged/main/default/objects/pse__Time_Period__c/fields/pse__Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>SemiMonthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>