unpackaged/main/default/objects/pse__Time_Period__c/validationRules/pse__Time_Period_may_not_end_before_it_starts.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Time_Period_may_not_end_before_it_starts</fullName>
    <active>true</active>
    <errorConditionFormula>pse__Start_Date__c &gt; pse__End_Date__c</errorConditionFormula>
    <errorMessage>Time Period may not end before it starts</errorMessage>
</ValidationRule>