unpackaged/main/default/objects/pse__Time_Period__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Closed_For_Forecasting__c</columns>
    <columns>pse__Type__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Type__c</field>
        <operation>equals</operation>
        <value>Month</value>
    </filters>
    <label>All</label>
</ListView>