unpackaged/main/default/objects/pse__Time_Period__c/listViews/Week.listView-meta.xml
<ListView>
    <fullName>Week</fullName>
    <columns>NAME</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Closed_For_Forecasting__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Type__c</field>
        <operation>equals</operation>
        <value>Week</value>
    </filters>
    <label>Week</label>
</ListView>